# CEPTO

./: .editorconfig  .gitignore  LICENSE  README.md  ansible.yaml  diagrams.md  heucod_event.py  hosts.yaml  setup_pi.sh  useful_queries.sql
CeptoApi/: CeptoApi.csproj  Program.cs  README.md  Startup.cs  WeatherForecast.cs  front_api.py  main.py
CeptoApi/Controllers/: AuthenticateController.cs  FetchEventsController.cs  FetchEventsController.cs.bak  WeatherForecastController.cs
CeptoApi/DatabaseInterface/: AppDB.cs
CeptoApi/Models/: AuthenticateReply.cs  AuthenticateRequest.cs  EndSessionReply.cs  EndSessionRequest.cs  EventSchema.cs  FetchEventsReply.cs  FetchEventsRequest.cs
CeptoApi/Properties/: launchSettings.json
cepto_api/: DELETE_THIS.sql  front_api.py  main.py
database/: .env  create_tables.sql  create_tables_2.sql  create_test_data.sql  insert_data_into_db.py  pyproject.toml
docs/: diagrams.md  reqdoc_3.2.tex
light_guide/production/: LightGuideHome.py  config.json
light_guide/prototype/: LightGuideHome.py  config.json  data.json  devices.json  idfk.py  light_guide.py  smart_home.py  threads.py
light_guide/setup/: setup_pi.sh  zigbee2mqtt.service
setup/: configuration.yaml
web_server/: .env  Dockerfile  back_api.py  front_api.py  install.sh  launch.sh  main.py  pyproject.toml  requirements.txt
web_server/database/: create_tables.sql
web_server/web_api/: front_api.py
