[tool.poetry]
name = "mqtt_to_mariadb"
version = "0.1.0"
description = "Script to listen to mqtt topic and insert data into mariadb for CEPTO application"
authors = ["Kristoffer <kristoffer.pbs@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
loguru = "^0.5.3"
mysql-connector-python = "^8.0.24"
paho-mqtt = "^1.5.1"
python-dotenv = "^0.17.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
